tests/tuple.err.out
error: tuple.err.li 2,10: mismatched types: `...(int, int)` (expected) and `int` (found)
    2 |   return 0
      |          ^
error: tuple.err.li 3,10: mismatched types: `...(int, int)` (expected) and `(string, string)` (found)
    3 |   return ('x', 'y')
      |          ^^^^^^^^^^
error: tuple.err.li 6,1: mismatched types: `int` (left) and `(int, int)` (pipe in of right)
    6 | 0 |> f()
      | ^^^^^^^^
error: tuple.err.li 10,3: expected 0 arguments, but got 1
   10 |   read(&v)
      |   ^^^^^^^^
error: tuple.err.li 14,1: mismatched types: `int` (left) and `()` (pipe in of right)
   14 | 0 |> zero()
      | ^^^^^^^^^^^
error: tuple.err.li 15,1: mismatched types: `(int, int)` (left) and `()` (pipe in of right)
   15 | (1, 2) |> zero()
      | ^^^^^^^^^^^^^^^^
error: tuple.err.li 17,9: cannot use variadic type as tuple element
   17 | var v: (...int)
      |         ^^^^^^
